--- a/src/calculatorproject/Calculator.form
+++ b/src/calculatorproject/Calculator.form
@@ -24,13 +24,14 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
+              <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
+                      <Component id="ToggleDeg" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="CalcText" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
-                      <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="cos" alignment="1" max="32767" attributes="0"/>
                           <Component id="tan" alignment="1" max="32767" attributes="0"/>
@@ -95,7 +96,13 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="CalcText" pref="225" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="CalcText" pref="225" max="32767" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="ToggleDeg" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  </Group>
+              </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="ClearEverything" alignment="0" min="-2" pref="35" max="-2" attributes="0"/>
@@ -470,6 +477,11 @@
         </Property>
         <Property name="horizontalAlignment" type="int" value="11"/>
         <Property name="text" type="java.lang.String" value="0"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="ToggleDeg">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Degrees"/>
       </Properties>
     </Component>
   </SubComponents>
